Rectified Index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src="computer.png" data-toggle="tooltip" data-placement="bottom" title="Working hard to have a dream PC setup :)" id="comp">
       <img src="headphones.png" data-toggle="tooltip" data-placement="bottom" title="I love to hear music while working" id="sphere3">
     </div>
-    <h1 id="h1">I'm, Divyansh Singhal , Front-End Web Developer.</h1>
+    <h1 id="h1">I'm Divyansh Singhal , Front-End Web Developer.</h1>
     <div class="row1">
       <img src="notebook-front-color.png" data-toggle="tooltip" data-placement="bottom" title="I'm Currently a B.Tech Undergraduate" id="note">   
       <a href="#cardsec"><img src="Untitled_design-removebg-preview.png"  id="arrow"></a>
