--- a/index.html
+++ b/index.html
@@ -104,6 +104,34 @@
           </div>
         </div>
       </div>
+      <div class="card" style="background-color: black;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="randomltr.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title" style="color: white;">Random Letter Generator</h5>
+              <p class="card-text" style="color: white;">A simple website whose logic works to generate some random letters using the given sample text.</p>
+              <p class="card-text" ><a  href="https://divyansh-singhal.github.io/Random-letter-Generator/">Tap here to visit the website.</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="background-color: black;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="randomgirl.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title" style="color: white;">Random Girl Name Generator</h5>
+              <p class="card-text" style="color: white;">A simple website whose logic works to generate random girl names from a selected list of names.</p>
+              <p class="card-text" ><a  href="https://divyansh-singhal.github.io/Random-Girl-Name-Generator/">Tap here to visit the website.</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>  
     
     
